* Fix - Use `add_to_cart_ajax_redirect` instead of the deprecated `redirect_ajax_add_to_cart` function as callback.
* Fix - Filtered order links in subscription reports returns all the orders when HPOS is enabled.
* Fix - Typo in confirmation alert when users remove an item from a subscription.
* Fix - Subscription table is empty in mobile view when HPOS is enabled.
* Fix - WooCommerce page header is hidden when HPOS is enabled.
* Dev - Calling wcs_create_subscription() will no longer attempt to fetch a fresh instance of the subscription at the end. This is to prevent loading the subscription from the database potentially unnecessarily.

= 7.0.0 - 2024-04-11 =
* Fix - Update the failing payment method on a subscription when customers successfully pay for a failed renewal order via the block checkout.
* Fix - Resolved an issue that would cause subscriptions to be directly cancelled by the WooCommerce process of automatically cancelling unpaid orders in-line with the hold stock setting.
* Fix - Prevent duplicate status transition notes on subscriptions and potential infinite loops when processing subscription status transitions.
* Fix - Resolved an issue that could lead to "Undefined array key 'order-received'" errors.
* Fix - Resolved errors that could occur when paying for renewal orders via the checkout when the store has custom checkout fields.
* Fix - Resolved database errors that would occur when ordering the subscriptions list table by the 'Last order date' on sites with HPOS enabled.
* Dev - Introduced a new filter ('wcs_setup_cart_for_subscription_initial_payment') to enable third-party plugins to use the pay-for-order flow to complete a subscription's initial payment.

= 6.9.0 - 2024-03-28 =
* Fix - Resolved an issue where discounts, when reapplied to failed or manual subscription order payments, would incorrectly account for inclusive tax.