@@ -8,6 +8,7 @@
 * Fix - Use `add_to_cart_ajax_redirect` instead of the deprecated `redirect_ajax_add_to_cart` function as callback.
 * Fix - Filtered order links in subscription reports returns all the orders when HPOS is enabled.
 * Fix - Typo in confirmation alert when users remove an item from a subscription.
+* Fix - Ensure the scheduled sale price for subscription products ends at the end of the "to" day set in product settings.
 * Fix - Subscription table is empty in mobile view when HPOS is enabled.
 * Fix - WooCommerce page header is hidden when HPOS is enabled.
 * Dev - Calling wcs_create_subscription() will no longer attempt to fetch a fresh instance of the subscription at the end. This is to prevent loading the subscription from the database potentially unnecessarily.
